Portfolio with typeScript

--- a/index.html
+++ b/index.html
@@ -2,15 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" href="public/img/icono/icon.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="icon" href="/public/img/icono/icon.png">
-    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <title>Bruno Millalipe | Portfolio</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
-    <script src='https://kit.fontawesome.com/e76250a593.js' crossorigin='anonymous'></script>
-    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
+    <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
